<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightGrey">


    <Button
        android:id="@+id/btnStartRoverA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/start_rover_a" />

    <Button
        android:id="@+id/btnStartRoverB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/start_rover_b" />

    <TableLayout
        android:id="@+id/plateau"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
    </TableLayout>

    <TextView
        android:id="@+id/txtPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        />

</LinearLayout>